@@ -7,6 +7,7 @@ Current Release
 - Made tarfiles embed date and time
 - Added db_recovery library
 - Added PushBackup, RunAuditStep and RunAuditRange functions
+- Added dnsrecover tool
 
 2010-03-03 release-0.12
 - Reordered records in zone_importer_lib so SOA comes first
